istio-rollout/istio-rollout-owned-objs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-rollout-destination
  # will be created and owned by rollout object
  ownerReferences:
  - apiVersion: argoproj.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Rollout
    name: istio-rollout
    uid: fdf48004-0cf4-11ea-b443-42010aa80075
spec:
  # populated from rollout spec.strategy.canary.istio.service
  host: istio-rollout-svc

  # subsets contains a list of all current rollouts-pod-template-hash in the Rollout
  subsets:
  - name: 5f6f75b987
    labels:
      rollouts-pod-template-hash: 5f6f75b987
  - name: 647db9cbf5
    labels:
      rollouts-pod-template-hash: 647db9cbf5

---
# duplicated from strategy.canary.istio.service
apiVersion: v1
kind: Service
metadata:
  name: istio-rollout-5f6f75b987
  labels:
    app: istio-rollout
  ownerReferences:
  - apiVersion: argoproj.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Rollout
    name: istio-rollout
    uid: fdf48004-0cf4-11ea-b443-42010aa80075
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: istio-rollout
    rollouts-pod-template-hash: 5f6f75b987

---
# duplicated from strategy.canary.istio.service
apiVersion: v1
kind: Service
metadata:
  name: istio-rollout-647db9cbf5
  labels:
    app: istio-rollout
  ownerReferences:
  - apiVersion: argoproj.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Rollout
    name: istio-rollout
    uid: fdf48004-0cf4-11ea-b443-42010aa80075
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: istio-rollout
    rollouts-pod-template-hash: 647db9cbf5

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-rollout-virtualsvc
  ownerReferences:
  - apiVersion: argoproj.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Rollout
    name: istio-rollout
    uid: fdf48004-0cf4-11ea-b443-42010aa80075
spec:
  gateways:
  - istio-rollout-gateway # populated from rollout spec.strategy.canary.istio.gateway
  hosts:
  - istio-rollout.dev.argoproj.io # populated from the hosts section of the gateway specified above
  http:
  # route will contain at most two rules, populated from the stable and canary pod hashes
  - route:
    - destination:
        host: istio-rollout-5f6f75b987
      weight: 90
    - destination:
        host: istio-rollout-647db9cbf5
      weight: 10
